--- a/scenarios/ecommerce_node/node/public/stylesheets/style.styl
+++ b/scenarios/ecommerce_node/node/public/stylesheets/style.styl
@@ -37,6 +37,9 @@ body
 	p
 		margin-bottom 20px
 
+	input.spinner
+		width 20px
+
 p
   line-height 1.8
 	
@@ -48,6 +51,7 @@ p
 
 .red
 	color red
+
 
 footer
   width 500px
