--- a/scenarios/ecommerce_node/node/views/header.jade
+++ b/scenarios/ecommerce_node/node/views/header.jade
@@ -6,4 +6,9 @@ head
 	script(src="//code.jquery.com/jquery-1.10.2.min.js")
 	script(src="//code.jquery.com/ui/1.10.3/jquery-ui.js")
 	script(src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js")
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="/resources/demos/external/jquery.mousewheel.js"></script>
+	<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<link rel="stylesheet" href="/resources/demos/style.css">
 
