--- a/scenarios/ecommerce_node/node/public/stylesheets/style.styl
+++ b/scenarios/ecommerce_node/node/public/stylesheets/style.styl
@@ -21,27 +21,27 @@ main-color = #2e2e2e
 background-color = #faf9f0
 
 body
-  font-family 'Georgia'
-  background-color background-color
-  color #444
+	font-family 'Georgia'
+	background-color background-color
+	color #444
 
 .container
-	width 500px
-	margin 50px auto
+	margin:auto
+	width:70%
 	overflow hidden
 
 .main-content
-	horizontal-align middle
-	float left
-	width 300px
+	margin:auto
+	width 480px
 	p
 		margin-bottom 20px
 
-	input.spinner
-		width 20px
+th,td
+	width 160px
+	table-layout fixed
 
 p
-  line-height 1.8
+	line-height 1.8
 	
 .grey
 	color grey
@@ -52,10 +52,10 @@ p
 .red
 	color red
 
-
 footer
-  width 500px
-  margin 50px auto
-  border-top 2px dotted #ccc
-  padding-top 5px
-  font-size 13px
+	width 500px
+	margin 50px auto
+	border-top 2px dotted #ccc
+	padding-top 5px
+	text-align center
+	font-size 13px
