--- a/scenarios/ecommerce_node/node/public/stylesheets/style.styl
+++ b/scenarios/ecommerce_node/node/public/stylesheets/style.styl
@@ -34,11 +34,51 @@ body
 	margin:auto
 	width 480px
 	p
+		margin-top 20px
 		margin-bottom 20px
 
+#login_content
+	margin:auto
+	width 480px
+	margin-top 100px
+	margin-bottom 100px
+	p
+		margin-top 20px
+		margin-bottom 20px
+
+#shop
+	th,td
+		width 160px
+		height 50px
+		vertical-align middle
+		table-layout fixed
+
+#login
+  #login_1
+		width 30%
+		height 10px
+		vertical-align middle
+		text-align right
+  #login_2
+		width 70%
+		height 10px
+		vertical-align middle
+		text-align right
+  #login_3
+		width 100%
+		height 10px
+		vertical-align middle
+		text-align center
 th,td
-	width 160px
-	table-layout fixed
+	width 100px
+	height 10px
+	vertical-align middle
+
+#login_panel
+	width 50%
+	margin-left auto
+	margin-right auto
+
 
 p
 	line-height 1.8
