--- a/scenarios/ecommerce_node/node/views/index.jade
+++ b/scenarios/ecommerce_node/node/views/index.jade
@@ -3,7 +3,7 @@ block content
 	div(class="panel panel-default")
 		div(class="panel-heading") 
 			h3(class="panel-title") Available Items
-		table(class="table table-striped table-hover")
+		table(class="table table-striped table-hover" id="shop")
 			tr
 				th Name
 				th Price
