added some modules in package.jason. Added a few scripts.

--- a/abrest/views/index.jade
+++ b/abrest/views/index.jade
@@ -9,7 +9,7 @@ html
 				center
 					h1 Welcome
 					p We specialize in all types of electronic products such as laptops, mobile phones, tablets. We have all the top brands such as Apple, Dell, Samsung, HP etc. Check our product catalog.
-					a(class = 'btn btn-default') Browse
+					a(href="/catalog" class = 'btn btn-default') Browse
 					a(class = 'btn btn-info') Login
 
 		include login
