--- a/abrest/views/nav.jade
+++ b/abrest/views/nav.jade
@@ -13,4 +13,4 @@ div(class = 'navbar navbar-inverse navbar-static-top')
 				li
 					a(href = '/register') Register
 				li
-					a(href = '#') Catalog
+					a(href = '/catalog') Catalog
