--- a/abrest/views/browse.jade
+++ b/abrest/views/browse.jade
@@ -1,13 +1,24 @@
 doctype html
 html
-	include header
-	script(src="/javascripts/fileupload.js")
+	include catalog_header
+	script(src="/javascripts/browse.js")
 	body
 		include nav
 
 		div(class = 'container')
-			div(class = 'container' id="leftbar")
-			div(class = 'container' id="items")
+			div(id = 'legend')
+				legen
+					h3 Catalog
+			table(class="table" id="shop")
+				for row,i in [['macbook air','macbook pro','iphone'],['sumsung galaxy','sumsung note I','sumsung note II'],['Google Nexus 5','Amazon Kindle','Amazon Kindle Fire']]
+					tr
+						for item in row 
+							th 
+								//a(href="/catalog/"+item)
+								div( class = 'hoverDiv item')
+									img(src="http://g-ecx.images-amazon.com/images/G/01/electronics/apple/apple-12q2-macbook-pro-13-front-lg.jpg" class="item")
+									center
+										p=item
 
 
 
