Added check if user input is valid for register. Added check user identity for login(not completely finished, a bug needs to be fixed.

--- a/abrest/public/stylesheets/styles.css
+++ b/abrest/public/stylesheets/styles.css
@@ -18,6 +18,10 @@ body {
    display: none;
 }
 
+li.error{
+	color: red;
+}
+
 .dummyfile input[type="text"] {
    width: 120px;
    display: inline;
