--- a/abrest/views/register.jade
+++ b/abrest/views/register.jade
@@ -10,6 +10,10 @@ html
 					div(id = "legend")
 						legend
 							h4 Register
+					if(error)
+						ul
+							for msg in error
+								li(class="error")=msg 
 					div(class = "form-group")
 						label(for = "uname", class = "col-sm-2 control-label") Username
 						div(class = "col-sm-3")
