--- a/abrest/views/register.jade
+++ b/abrest/views/register.jade
@@ -1,19 +1,19 @@
 doctype html
 html
 	include header
-	script(src="/javascripts/fileupload.js")
+	//- script(src="/javascripts/fileupload.js")
 	body
 		include nav
 
 		div(class = "container")
-				form(class = "form-horizontal", role = "form", method = "POST", action = "/register")
+				form(class = "form-horizontal", role = "form", method = "POST", action = "/register", enctype="multipart/form-data")
 					div(id = "legend")
 						legend
 							h4 Register
 					if(error)
 						ul
 							for msg in error
-								li(class="error")=msg 
+								li(class="error")=msg
 					div(class = "form-group")
 						label(for = "uname", class = "col-sm-2 control-label") Username
 						div(class = "col-sm-3")
@@ -25,11 +25,12 @@ html
 					div(class = "form-group")
 						label(for = "abfile", class = "col-sm-2 control-label") Active Bundle
 						div(class = "col-sm-3")
-							div(class = "controls")
-								input(type = "file", id = "file")
-								div(class = "dummyfile")
-									input(id = "filename", type = "text", class = "input disabled", name = "filename" readonly)
-									a(id = "fileselectbutton", class = "btn btn-info") Choose
+							input(type = "file", id="abfile", name = "abfile")
+							//- div(class = "controls")
+							//- 	input(type = "file", id = "file")
+							//- 	div(class = "dummyfile")
+							//- 		input(id = "filename", type = "text", class = "input disabled", name = "filename" readonly)
+							//- 		a(id = "fileselectbutton", class = "btn btn-info") Choose
 					div(class = "form-group")
 						div(class = "col-sm-offset-2 col-sm-10")
 							button(type = "submit", class = "btn btn-primary") Sign up
