--- a/abrest/views/catalog_header.jade
+++ b/abrest/views/catalog_header.jade
@@ -10,3 +10,9 @@ head
 	link(rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
 	link(rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css")
 	script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+	// JQuery
+	link(rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css")
+	script(src="//code.jquery.com/jquery-1.9.1.js")
+	script(src="/resources/demos/external/jquery.mousewheel.js")
+	script(src="//code.jquery.com/ui/1.10.4/jquery-ui.js")
+
