Added a custom margin and fixed response errors

--- a/abrest/views/index.jade
+++ b/abrest/views/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html
 	include header
+	link(rel = 'stylesheet', href = '/stylesheets/main.css')
 	body
 		include nav
 
@@ -9,8 +10,8 @@ html
 				center
 					h1 Welcome
 					p We specialize in all types of electronic products such as laptops, mobile phones, tablets. We have all the top brands such as Apple, Dell, Samsung, HP etc. Check our product catalog.
-					a(href="/catalog" class = 'btn btn-default') Browse
-					a(class = 'btn btn-info') Login
+					a(href="/catalog" class = 'btn btn-default custom_margin') Browse
+					a(class = 'btn btn-info custom_margin') Login
 
 		include login
 
