Basic service side working

--- a/console/views/services.jade
+++ b/console/views/services.jade
@@ -27,5 +27,5 @@ block content
 							td=entry.status
 							td
 								div
-									a(href=('./service?id=' + entry.id)) Edit
+									a(href=('./service?id=' + entry.id + '&name=' + entry.display_name + '&rating=' + entry.rating + '&trust=' + entry.trust_level)) Edit
 
