--- a/console/views/layout.jade
+++ b/console/views/layout.jade
@@ -7,7 +7,7 @@ html(lang='en')
 
 			link(rel='stylesheet' href='http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css')
 			link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-			link(rel='stylesheet', href='/stylesheets/style.css')
+			link(rel='stylesheet', href='/css/style.css')
 			
 			script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
 			script(src='http://code.jquery.com/jquery-1.9.1.js')
