Deleted extra jade files

--- a/console/views/index.jade
+++ b/console/views/index.jade
@@ -8,11 +8,11 @@ block content
 			center
 				h1= title
 				p Welcome to #{title}
-				a(href='/show_registrations' class = 'btn btn-info custom_margin') Client
+				a(href='/client' class = 'btn btn-info custom_margin') Client
 				a(href='/services' class = 'btn btn-info custom_margin') Services
 				a(href='/' class = 'btn btn-info custom_margin') Interactions
 
 	div(class = 'navbar navbar-default navbar-fixed-bottom')
 		div(class = 'container')
 			p(class = 'navbar-text pull-left') RAID Lab, Purdue University
-			a(href = 'https://code.google.com/p/absoa/', class = 'navbar-btn btn-danger btn pull-right') Source Code
+			a(href = 'https://code.google.com/p/absoa/', class = 'navbar-btn btn-info btn pull-right') Source Code
