Demo client page

--- a/console/views/nav.jade
+++ b/console/views/nav.jade
@@ -10,7 +10,7 @@ div(class = 'navbar navbar-inverse navbar-static-top')
 			ul(class = 'nav navbar-nav navbar-right')
 				li
 					//- a(href = '/feedback') Feedback
-					a(href = '/show_registrations') Client
+					a(href = '/client') Client
 				li
 					a(href = '/services') Services
 				li
