Added scenarios tab

--- a/console/views/index.jade
+++ b/console/views/index.jade
@@ -9,7 +9,8 @@ block content
 				h1= title
 				p Welcome to #{title}
 				a(href='/client' class = 'btn btn-info custom_margin') Client
-				a(href='/services' class = 'btn btn-info custom_margin') Services
+				a(href='/service_list' class = 'btn btn-info custom_margin') Services
+				a(href='/scenario_list' class = 'btn btn-info custom_margin') Scenarios
 				a(href='/' class = 'btn btn-info custom_margin') Interactions
 
 	div(class = 'navbar navbar-default navbar-fixed-bottom')
