--- a/console/views/nav.jade
+++ b/console/views/nav.jade
@@ -12,6 +12,8 @@ div(class = 'navbar navbar-inverse navbar-static-top')
 					//- a(href = '/feedback') Feedback
 					a(href = '/client') Client
 				li
-					a(href = '/services') Services
+					a(href = '/service_list') Services
+				li
+					a(href = '/scenario_list') Scenarios
 				li
 					a(href = '/') Interaction
