--- a/console/views/service.jade
+++ b/console/views/service.jade
@@ -12,7 +12,7 @@ block content
 		div(class="panel panel-default")
 			div(class="panel-body")
 				//- form(class='form-horizontal' style='margin-top:20px')
-				form(class='form-horizontal form-head')
+				form(class='form-horizontal top-buffer')
 					div(class='form-group')
 						label(class='col-sm-2 control-label') ID
 						div(class='col-xs-3')
