Removed unnecessary content in scenario jade

--- a/console/views/layout.jade
+++ b/console/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
 	head
 		block head
-			title= title
+			title Active Bundle Console
 			meta(charset='UTF-8', name = 'viewport', content = 'width=device-width, initial-scale=1.0')
 
 			link(rel='stylesheet' href='http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css')
