--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -16,20 +16,27 @@ block content
 							div(class='col-lg-8')
 								div(class='form-group')
 									label(for='datakey1') Type
-										input(name='datakey1' type='text' class='form-control' placeholder='key')
+										input(name='datakey1' type='text' class='form-control' placeholder='UID')
 									label(for='datavalue1') Content
-										input(name='datavalue1' type='text' class='form-control' placeholder='value')
+										//OK input(name='datavalue1' type='text' class='form-control' placeholder='value')
+										input(name='datavalue1' type='text' class='form-control' placeholder='11111-22222')
+										//OK button(type="button", class="btn btn-primary pull-right", id=('a')) Enable
+										input(type="checkbox", name="checkboxname1", text="Include record to AB").form-control
+								//Enable m.b. right to policies, not here. Here we need checkbox 
+								// also add default values for 'Value' fields
 							div(class='col-lg-8')
 								div(class='form-group')
 									label(for='datakey2') Type
-										input(name='datakey2' type='text' class='form-control' placeholder='key')
+										input(name='datakey2' type='text' class='form-control' placeholder='GPA')
 									label(for='datavalue2') Content
-										input(name='datavalue2' type='text' class='form-control' placeholder='value')
+										input(name='datavalue2' type='text' class='form-control' placeholder='3.5')
+										input(type="checkbox", name="checkboxname2", text="Include record to AB").form-control
 							div(class='col-lg-8')
 								div(class='form-group')
 									label(for='datakey3') Type
-										input(name='datakey3' type='text' class='form-control' placeholder='key')
+										input(name='datakey3' type='text' class='form-control' placeholder='Assistantship')
 									label(for='datavalue3') Content
-										input(name='datavalue3' type='text' class='form-control' placeholder='value')
+										input(name='datavalue3' type='text' class='form-control' placeholder='TA')
+										input(type="checkbox", name="checkboxname3", text="Include record to AB").form-control
 							div(class='col-xs-3 top-buffer')
 									button(type='submit' class='btn btn-primary update-service') Generate Active Bundle
