--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -11,7 +11,9 @@ block content
 			h2 Active Bundle Generator
 		div(class="panel panel-default")
 			div(class="panel-body")
-				form(class='form-inline top-buffer' method = "POST" action = "/create")
+				//- form(class='form-inline top-buffer' method = "POST" action = "/create")
+				//- handle button event in client.js
+				form(class='form-inline top-buffer')
 					if(message)
 						p=message
 					else
@@ -23,9 +25,9 @@ block content
 										input(name='datakey1' type='text' class='form-control' placeholder='UID')
 									label(for='datavalue1') Content
 										//OK input(name='datavalue1' type='text' class='form-control' placeholder='value')
-										input(name='datavalue1' type='text' class='form-control' placeholder='11111-22222')
+										input(name='datavalue1' type='text' id='datavalue1' class='form-control' placeholder='11111-22222')
 										//OK button(type="button", class="btn btn-primary pull-right", id=('a')) Enable
-										input(type="checkbox", name='checkbox11', class='checkbox1' , text="Include record to AB").form-control
+										input(type="checkbox", name='checkbox11', class='checkbox1' , text="Include record to AB")
 										// OK button(id="test1", class="btn btn-success btn-sm") Start
 										//Enable m.b. right to policies, not here. Here we need checkbox 
 								// also add default values for 'Value' fields
@@ -34,14 +36,14 @@ block content
 									label(for='datakey2') Type
 										input(name='datakey2' type='text' class='form-control' placeholder='GPA')
 									label(for='datavalue2') Content
-										input(name='datavalue2' type='text' class='form-control' placeholder='3.5')
-										input(type="checkbox", name="checkbox22", class='checkbox2', text="Include record to AB").form-control
+										input(name='datavalue2' type='text' id='dataval2' class='form-control' placeholder='3.5')
+										input(type="checkbox", name="checkbox22", class='checkbox2', text="Include record to AB")
 							div(class='col-lg-8')
 								div(class='form-group')
 									label(for='datakey3') Type
 										input(name='datakey3' type='text' class='form-control' placeholder='Assistantship')
 									label(for='datavalue3') Content
 										input(name='datavalue3' type='text' class='form-control' placeholder='TA')
-										input(type="checkbox", name="checkbox33", class='checkbox3', text="Include record to AB").form-control
+										input(type="checkbox", name="checkbox33", class='checkbox3', text="Include record to AB")
 							div(class='col-xs-3 top-buffer')
 									button(type='submit' class='btn btn-primary update-service') Generate Active Bundle
