--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -32,6 +32,7 @@ html(lang='en')
 									div(class='w', id='service' + service.id)=service.display_name
 										div(style='color:red')
 											strong=service.trust_level
+										div='test'
 										div(class='ep')
 			div(class='col-md-4')
 				div(class='panel panel-default')
