--- a/console/public/css/scenario.css
+++ b/console/public/css/scenario.css
@@ -11,6 +11,10 @@
 }
 
 .w {
+    min-height: 150px;
+    min-width: 150px;
+    max-height: 200px;
+    max-width: 200px;
 	padding:16px;
 	position:absolute;
 	border: 1px solid black;
@@ -27,7 +31,7 @@
 	filter:alpha(opacity=80);
 	cursor:move;
 	background-color:white;
-	font-size:11px;
+	font-size:12px;
 	-webkit-transition:background-color 0.25s ease-in;
 	-moz-transition:background-color 0.25s ease-in;
 	transition:background-color 0.25s ease-in;
