--- a/console/views/client.jade
+++ b/console/views/client.jade
@@ -47,3 +47,23 @@ block content
 
 						div(class='col-xs-3 top-buffer')
 								button(type='submit' class='btn btn-primary update-service') Generate Active Bundle
+		//Policy section								
+		div(class="panel panel-primary")
+			div(class="panel-heading")
+				h3(class="panel-title") Policies for Active Bundle
+			div(class="panel-body")
+				div(class="panel-group" id="accordion_a")
+					///for alg in a_algos
+					///3 Feb. div(class="panel panel-default", id='collapse_a_panel' + alg.id)
+					div(class="panel panel-default", id='collapse_a_panel')
+						div(class="panel-heading")
+							h4
+								label(for='policy1' ) Policy 1
+								button(type="button", class="enable_btn1 pull-right", id=1) Enable
+							h4		
+								label(for='policy2' ) Policy 2
+								button(type="button", class="enable_btn2 pull-right", id=2) Enable
+		// 						a(data-toggle="collapse", data-parent="#accordion_a", href='#collapse_a_' + alg.id)=alg.name
+		// 						button(type="button", class="btn btn-primary pull-right", id=('a' + alg.id)) Enable
+		// 						div(id='collapse_a_' + alg.id, class="panel-collapse collapse")
+		// 
